--- a/ShoesShop/Views/DashboardPage.xaml
+++ b/ShoesShop/Views/DashboardPage.xaml
@@ -11,12 +11,22 @@
     mc:Ignorable="d">
 
     <Page.Resources>
+        
         <ResourceDictionary>
             <helpers:DateTimeToDateTimeOffsetConverter x:Key="DateTimeToDateTimeOffsetConverter"/>
             <helpers:CurrencyConverter x:Key="CurrencyConverter"/>
+            <helpers:CategoryIdToNameConverter x:Key="CategoryIdToNameConverter"/>
+
+            <Style x:Key="TitleText" TargetType="TextBlock">
+                <Setter Property="VerticalAlignment" Value="Center" />
+                <Setter Property="HorizontalAlignment" Value="Left" />
+                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="FontSize" Value="24" />
+            </Style>
+
             <SolidColorBrush x:Key="CardBackgroundBrush" Color="White"/>
             <DataTemplate x:Key="RecentOrderItemTemplate" x:DataType="models:Order">
-                <Grid Height="60">
+                <Grid VerticalAlignment="Stretch"  HorizontalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
@@ -49,32 +59,30 @@
             </DataTemplate>
 
             <DataTemplate x:Key="BestSellingShoesItemTemplate" x:DataType="models:Shoes">
-                <Grid Height="60">
+                <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="Auto" />
                         <ColumnDefinition Width="*" />
-                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
 
-                    <Image
-                        Grid.Column="0"
-                        Source="{x:Bind Image}"
-                        Width="50"
-                        Height="50"
-                        Margin="10"
-                        VerticalAlignment="Center" />
+                    <Border Grid.Column="0" HorizontalAlignment="Center" Width="64" Height="64" CornerRadius="8">
+                        <Image Source="{x:Bind Image}" Stretch="UniformToFill" VerticalAlignment="Center"/>
+                    </Border>
 
                     <StackPanel
                         Grid.Column="1"
                         Margin="10"
+                        HorizontalAlignment="Left"
                         VerticalAlignment="Center">
                         <TextBlock Text="{x:Bind Name}" Style="{StaticResource ListTitleStyle}" />
-                        <TextBlock Text="{x:Bind Brand}" Style="{StaticResource ListSubTitleStyle}" />
+                        <TextBlock Text="{x:Bind CategoryID, Converter={StaticResource CategoryIdToNameConverter}}" Style="{StaticResource ListSubTitleStyle}" />
                     </StackPanel>
 
                     <StackPanel
                         Grid.Column="2"
                         Margin="10"
+                        HorizontalAlignment="Right"
                         VerticalAlignment="Center">
                         <TextBlock Text="{x:Bind Price, Converter={StaticResource CurrencyConverter}}" Style="{StaticResource ListTitleStyle}" />
                     </StackPanel>
@@ -83,56 +91,105 @@
         </ResourceDictionary>
     </Page.Resources>
 
-    <ScrollViewer VerticalScrollBarVisibility="Auto">
-        <Grid x:Name="ContentArea" Background="{ThemeResource CardBackground}">
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20">
-                <Grid Margin="0,0,0,20">
+    <ScrollViewer VerticalScrollBarVisibility="Hidden">
+        <Grid x:Name="ContentArea">
+            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" Spacing="20">
+                <TextBlock Text="DashBoard" Style="{StaticResource TitleText}" FontSize="32"/>
+                <Grid ColumnSpacing="20">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0" Background="White" Padding="20" Margin="10" CornerRadius="10" BorderBrush="Gray" BorderThickness="1">
-                        <StackPanel>
-                            <TextBlock Text="Total Orders:" FontSize="24" Margin="0,0,0,10"/>
-                            <TextBlock Text="{Binding TotalOrders}" FontSize="24"/>
+                    <Border Grid.Column="0" Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="10">
+                        <StackPanel Spacing="10">
+                            <TextBlock Text="Total Orders:" FontSize="24"  FontWeight="Medium"/>
+                            <StackPanel Orientation="Horizontal">
+                                <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
+                                    <FontIcon Glyph="&#xE719;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+                                </Border>
+                                <TextBlock Text="{x:Bind ViewModel.TotalOrders, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
+                            </StackPanel>
                         </StackPanel>
                     </Border>
-                    <Border Grid.Column="1" Background="White" Padding="20" Margin="10" CornerRadius="10" BorderBrush="Gray" BorderThickness="1">
-                        <StackPanel>
-                            <TextBlock Text="Shoes in Stock:" FontSize="24" Margin="0,0,0,10"/>
-                            <TextBlock Text="{Binding TotalShoesInStock}" FontSize="24"/>
+                    <Border Grid.Column="1" Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="10">
+                        <StackPanel Spacing="10">
+                            <TextBlock Text="Shoes in Stock:" FontSize="24"  FontWeight="Medium"/>
+                            <StackPanel Orientation="Horizontal">
+                                <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
+                                    <FontIcon Glyph="&#xE7BF;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+                                </Border>
+                                <TextBlock Text="{x:Bind ViewModel.TotalShoesInStock, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </StackPanel>
+                    </Border>
+                    <Border Grid.Column="2" Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="10">
+                        <StackPanel Spacing="10">
+                            <TextBlock Text="Shoes in Stock:" FontSize="24"  FontWeight="Medium"/>
+                            <StackPanel Orientation="Horizontal">
+                                <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
+                                    <FontIcon Glyph="&#xE7BF;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+                                </Border>
+                                <TextBlock Text="{x:Bind ViewModel.TotalShoesInStock, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
+                            </StackPanel>
                         </StackPanel>
                     </Border>
                 </Grid>
-                <Grid>
+                <Grid ColumnSpacing="20">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                    <Border Grid.Column="0" Background="White" Padding="20" Margin="10" CornerRadius="10" BorderBrush="Gray" BorderThickness="1">
-                        <StackPanel>
-                            <TextBlock Text="Recent Orders:" FontSize="24" Margin="0,0,0,10"/>
-                            <ListView ItemsSource="{Binding RecentOrders}" Width="400" Height="300" ItemTemplate="{StaticResource RecentOrderItemTemplate}">
-                            </ListView>
-                        </StackPanel>
-                    </Border>
-                    <Border Grid.Column="1" Background="White" Padding="20" Margin="10" CornerRadius="10" BorderBrush="Gray" BorderThickness="1">
-                        <StackPanel>
-                            <TextBlock Text="Best Selling Shoes:" FontSize="24" Margin="0,0,0,10"/>
-                            <ListView ItemsSource="{Binding Top5BestSellingShoes}" Width="400" Height="300" ItemTemplate="{StaticResource BestSellingShoesItemTemplate}">
+                    <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="10">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="Order Statistics" FontSize="24" Margin="0 0 0 10" FontWeight="Medium"/>
+                            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                                <Button Content="By Month" Command="{Binding LoadOrderStatisticsCommand}" CommandParameter="month" Margin="5"/>
+                                <Button Content="By Year" Command="{Binding LoadOrderStatisticsCommand}" CommandParameter="year" Margin="5"/>
+                            </StackPanel>
+                        </Grid>
+
+                        <oxy:PlotView Model="{Binding OrderStatisticsPlotModel}" Foreground="{ThemeResource TextAddButton}" Height="400" Margin="5" BorderBrush="Gray" BorderThickness="0 2 0 0"/>
+                    </StackPanel>
+
+                    <Border Grid.Column="2" Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="10">
+                        <StackPanel Spacing="10">
+                            <TextBlock Text="Best Selling Shoes:" FontSize="24" FontWeight="Medium"/>
+                            <ListView Margin="0 5 0 0" BorderBrush="Gray" BorderThickness="0 2 0 0"
+                                      ItemsSource="{Binding Top5BestSellingShoes}" ItemTemplate="{StaticResource BestSellingShoesItemTemplate}">
+                                <ListView.ItemContainerStyle>
+                                    <Style TargetType="ListViewItem">
+                                        <Setter Property="Margin" Value="0 0 0 10"/>
+                                        <Setter Property="HorizontalContentAlignment"  Value="Stretch"/>
+                                        <!-- Adjust the margin as needed -->
+                                    </Style>
+                                </ListView.ItemContainerStyle>
                             </ListView>
                         </StackPanel>
                     </Border>
                 </Grid>
 
-                <StackPanel>
-                    <TextBlock Text="Order Statistics" FontSize="24" Margin="10"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
-                        <Button Content="By Month" Command="{Binding LoadOrderStatisticsCommand}" CommandParameter="month" Margin="5"/>
-                        <Button Content="By Year" Command="{Binding LoadOrderStatisticsCommand}" CommandParameter="year" Margin="5"/>
+                <Border Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="10">
+                    <StackPanel Spacing="10">
+                        <TextBlock Text="Recent Orders:" FontSize="24" FontWeight="Medium"/>
+                        <ListView Margin="0 5 0 0" BorderBrush="Gray" BorderThickness="0 2 0 0"
+                                ItemsSource="{Binding RecentOrders}" ItemTemplate="{StaticResource RecentOrderItemTemplate}">
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="Margin" Value="0 0 0 10"/>
+                                    <Setter Property="HorizontalContentAlignment"  Value="Stretch"/>
+                                    <!-- Adjust the margin as needed -->
+                                </Style>
+                            </ListView.ItemContainerStyle>
+                        </ListView>
                     </StackPanel>
-                    <oxy:PlotView Model="{Binding OrderStatisticsPlotModel}" Height="400" Margin="10"/>
-                </StackPanel>
+                </Border>
+
             </StackPanel>
         </Grid>
     </ScrollViewer>
