--- a/ShoesShop/Views/ShoesPage.xaml
+++ b/ShoesShop/Views/ShoesPage.xaml
@@ -257,7 +257,7 @@
                                                 <ColumnDefinition Width="*" />
                                             </Grid.ColumnDefinitions>
                                             <TextBlock Text="Sales" FontWeight="Medium" Grid.Column="0"/>
-                                            <FontIcon Glyph="&#xE746;" Foreground="#FFA52F" FontWeight="Medium" Grid.Column="1"/>
+                                            <FontIcon Glyph="&#xE7EB;" Foreground="#FFA52F" FontWeight="Bold" Grid.Column="1"/>
                                             <TextBlock Text="{x:Bind ID, Converter={StaticResource ShoesSoldConverter}}" FontWeight="Bold" Grid.Column="2" HorizontalAlignment="Right"/>
                                         </Grid>
 
@@ -268,7 +268,7 @@
                                                 <ColumnDefinition Width="*" />
                                             </Grid.ColumnDefinitions>
                                             <TextBlock Text="Remaining Products" FontWeight="Medium" Grid.Column="0"/>
-                                            <FontIcon Glyph="&#xE7EB;" Foreground="#FFA52F" FontWeight="Medium" Grid.Column="1"/>
+                                            <FontIcon Glyph="&#xE746;" Foreground="#FFA52F" FontWeight="Bold" Grid.Column="1"/>
                                             <TextBlock Text="{x:Bind Stock}" FontWeight="Bold" Grid.Column="2" HorizontalAlignment="Right"/>
                                         </Grid>
                                     </StackPanel>
