--- a/ShoesShop/Views/DashboardPage.xaml
+++ b/ShoesShop/Views/DashboardPage.xaml
@@ -125,12 +125,12 @@
                     </Border>
                     <Border Grid.Column="2" Background="{ThemeResource CardBackground}" Padding="20" CornerRadius="10">
                         <StackPanel Spacing="10">
-                            <TextBlock Text="Shoes in Stock:" FontSize="24"  FontWeight="Medium"/>
+                            <TextBlock Text="Revenue:" FontSize="24"  FontWeight="Medium"/>
                             <StackPanel Orientation="Horizontal">
                                 <Border Background="#4A69E2" Padding="5" CornerRadius="5" Margin="0 0 25 0">
-                                    <FontIcon Glyph="&#xE7BF;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
+                                    <FontIcon Glyph="&#xE752;" FontSize="24" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"/>
                                 </Border>
-                                <TextBlock Text="{x:Bind ViewModel.TotalShoesInStock, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
+                                <TextBlock Text="{x:Bind ViewModel.TotalRevenue, Mode=TwoWay}" FontWeight="Bold" FontSize="24" VerticalAlignment="Center"/>
                             </StackPanel>
                         </StackPanel>
                     </Border>
