--- a/ShoesShop/Views/AddShoesPage.xaml
+++ b/ShoesShop/Views/AddShoesPage.xaml
@@ -2,72 +2,109 @@
     x:Class="ShoesShop.Views.AddShoesPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:ShoesShop.Views"
+    xmlns:helpers="using:ShoesShop.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:helpers="using:ShoesShop.Helpers"
     mc:Ignorable="d">
+
     <Page.Resources>
-        <helpers:DecimalToDoubleConverter x:Key="DecimalToDoubleConverter" />
+        <helpers:PrefixConverter x:Key="PrefixConverter" />
+        <helpers:StringToBitmapImageConverter x:Key="StringToBitmapImageConverter" />
+        <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+
+        <Style x:Key="TitleText" TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="FontWeight" Value="Medium" />
+            <Setter Property="FontSize" Value="28" />
+        </Style>
+        <Style x:Key="UserText" TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="FontWeight" Value="Medium" />
+        </Style>
+        <Style x:Key="ButtonSize" TargetType="Button">
+            <Setter Property="MaxWidth" Value="100" />
+            <Setter Property="MaxHeight" Value="46" />
+            <Setter Property="FontWeight" Value="Medium" />
+            <Setter Property="CornerRadius" Value="4" />
+        </Style>
     </Page.Resources>
-    <ScrollViewer Margin="0,0,0,40">
-        <Grid>
-            <StackPanel x:Name="ContentArea" Spacing="16" MaxWidth="600" Padding="0, 20, 0, 20">
-                <TextBox Header="Shoes Name" PlaceholderText="Shoes Name" Text="{x:Bind ViewModel.NewShoes.Name, Mode=TwoWay}" />
-                <TextBox Header="Brand" PlaceholderText="Brand name" Text="{x:Bind ViewModel.NewShoes.Brand, Mode=TwoWay}" />
-                <TextBox Header="Color" PlaceholderText="Color name" Text="{x:Bind ViewModel.NewShoes.Color, Mode=TwoWay}" />
-                <TextBox Header="Size" PlaceholderText="Size" Text="{x:Bind ViewModel.NewShoes.Size, Mode=TwoWay}" />
-                <!--<NumberBox Header="Size" SmallChange="1" LargeChange="10" SpinButtonPlacementMode="Inline" Value="{x:Bind ViewModel.NewShoes.Size, Mode=TwoWay}" />-->
-                <NumberBox Header="Available quantity" SmallChange="1" LargeChange="10" SpinButtonPlacementMode="Inline" Value="{x:Bind ViewModel.NewShoes.Stock, Mode=TwoWay}"/>
-                <TextBox Header="Description" Height="120" PlaceholderText="Write Shoes description" Text="{x:Bind ViewModel.NewShoes.Description, Mode=TwoWay}" />
-                <NumberBox Header="Purchase price" Value="{x:Bind ViewModel.NewShoes.Price, Mode=TwoWay, Converter={StaticResource DecimalToDoubleConverter}}" SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />
-                <!--<NumberBox Header="Selling price" Value="{x:Bind ViewModel.NewShoes.SellingPrice, Mode=TwoWay}"  SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />-->
+
+    <ScrollViewer VerticalScrollBarVisibility="Hidden">
+        <Grid Padding="20" Background="{ThemeResource CardBackground}" CornerRadius="10" DataContext="{x:Bind ViewModel.NewShoes, Mode=TwoWay}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+
+            <!-- Left Section -->
+            <StackPanel Grid.Column="0" Spacing="15" HorizontalAlignment="Stretch" Padding="0 0 20 0">
+                <TextBlock Text="Add Shoes" FontSize="24" FontWeight="Bold" />
+                <TextBox Header="Product Name" PlaceholderText="Enter user's full name" Text="{x:Bind ViewModel.NewShoes.Name, Mode=TwoWay}" />
+                <TextBox Header="Description" PlaceholderText="Write something here" Text="{x:Bind ViewModel.NewShoes.Description, Mode=TwoWay}" MinHeight="250"/>
                 <ComboBox 
+                    HorizontalAlignment="Stretch" 
                     x:Name="CategoryCombobox" 
-                    SelectionChanged="CategoryCombobox_SelectionChanged" 
-                    Header="Category" Width="200" 
+                    Header="Category" 
+                    PlaceholderText="Select Category"
                     ItemsSource="{x:Bind ViewModel.CategoryOptions, Mode=OneWay}"
-                    DisplayMemberPath="Name"  />
-                <StackPanel VerticalAlignment="Top">
-                    <TextBlock Text="Shoes photo" Margin="0,0,0,10"/>
-                    <StackPanel Orientation="Horizontal">
-                        <Button  Content="Select a picture" Command="{x:Bind ViewModel.SelectImageButtonCommand}" />
-                        <TextBlock FontWeight="Medium" Text="{x:Bind ViewModel.SelectedImageName, Mode=OneWay}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                        <Button VerticalAlignment="Center" Visibility="{x:Bind ViewModel.IsImageSelected, Mode=OneWay}" Margin="4,0,0,0" Command="{x:Bind ViewModel.RemoveImageButtonCommand}">
-                            <FontIcon Glyph="&#xE8BB;" FontSize="12" />
-                        </Button>
-                    </StackPanel>
-                </StackPanel>
+                    DisplayMemberPath="Name" 
+                    SelectedItem="{x:Bind ViewModel.SelectedCategory, Mode=TwoWay}" />
+                <ComboBox Grid.Column="1" HorizontalAlignment="Stretch" x:Name="StatusComboBox" Header="Status"  PlaceholderText="Select Status" SelectedValue="{x:Bind ViewModel.NewShoes.Status, Mode=TwoWay}" SelectedValuePath="Content">
+                    <ComboBoxItem Content="Active" />
+                    <ComboBoxItem Content="Inactive" />
+                </ComboBox>
+                <TextBlock Text="Address:" FontWeight="Medium" />
+                <Grid ColumnSpacing="20" RowSpacing="20">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <TextBox Header="Brand Name" PlaceholderText="Enter Brand" Text="{x:Bind ViewModel.NewShoes.Brand, Mode=TwoWay}" Grid.Column="0" Grid.Row="0" />
+                    <TextBox Header="Size" PlaceholderText="Enter Size" Text="{x:Bind ViewModel.NewShoes.Size, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" />
+                    <TextBox Header="Color" PlaceholderText="Enter Color" Text="{x:Bind ViewModel.NewShoes.Color, Mode=TwoWay}" Grid.Column="0" Grid.Row="1" />
+                    <TextBox Header="Stock Quantity" PlaceholderText="Enter Stock" Text="{x:Bind ViewModel.NewShoes.Stock, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"/>
+                    <TextBox Header="Cost Price" PlaceholderText="Enter zip code" Text="{x:Bind ViewModel.NewShoes.Cost, Mode=TwoWay}" Grid.Column="0" Grid.Row="2"/>
+                    <TextBox Header="Selling Price" PlaceholderText="Enter country" Text="{x:Bind ViewModel.NewShoes.Price, Mode=TwoWay}" Grid.Column="1" Grid.Row="2"/>
+                </Grid>
+            </StackPanel>
 
-
-                <!--Loading-->
-                <ProgressRing 
-                    IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" 
-                    Visibility="{x:Bind ViewModel.IsLoading, Mode=OneWay}" 
-                    Width="60"
-                    Height="{Binding Width, RelativeSource={RelativeSource Self}}"/>
-
-                <!--Error & Info-->
-                <InfoBarPanel>
-                    <InfoBar 
-                        Title="Error Creating Shoes"
-                        Severity="Error"
-                        IsOpen="{x:Bind ViewModel.HasError, Mode=OneWay}"
-                        Message="{x:Bind ViewModel.ErrorMessage, Mode=OneWay}"
-                        />
-
-                    <InfoBar
-                        Title="Ting"
-                        Severity="Success"
-                        IsOpen="{x:Bind ViewModel.HasSuccess, Mode=OneWay}"
-                        Message="{x:Bind ViewModel.SuccessMessage, Mode=OneWay}"
-                        />
-                </InfoBarPanel>
-
-                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Spacing="12">
-                    <Button Style="{StaticResource AccentButtonStyle}" Content="Add Shoes" Command="{x:Bind ViewModel.AddShoesButtonCommand}" />
-                    <Button Content="Reset" Command="{x:Bind ViewModel.ResetButtonCommand}" />
+            <!-- Right Section -->
+            <StackPanel Grid.Column="1" Spacing="15" HorizontalAlignment="Stretch">
+                <Border BorderThickness="2" CornerRadius="40" MaxWidth="200" MaxHeight="200">
+                    <Image Source="{x:Bind ViewModel.NewShoes.Image, Mode=TwoWay, Converter={StaticResource StringToBitmapImageConverter}}" Stretch="UniformToFill" />
+                </Border>
+                <TextBlock Text="Upload Profile Picture" FontWeight="SemiBold" />
+                <Button Content="Browse Image" Command="{x:Bind ViewModel.SelectImageButtonCommand}" />
+                <TextBlock Text="Actions" FontWeight="Bold" FontSize="18" />
+                <StackPanel Orientation="Horizontal" Spacing="10">
+                    <Button Content="Add Shoes" 
+                Background="#232321" 
+                Foreground="White" 
+                Style="{StaticResource ButtonSize}" 
+                Command="{x:Bind ViewModel.CreateButtonCommand}" />
+                    <Button Content="Cancel" 
+                BorderThickness="2" 
+                BorderBrush="#232321" 
+                Style="{StaticResource ButtonSize}" 
+                Command="{x:Bind ViewModel.CancelButtonCommand}" />
                 </StackPanel>
             </StackPanel>
+
+            <!-- Loading Indicator -->
+            <Grid Background="Transparent" Visibility="{x:Bind ViewModel.IsLoading, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <ProgressRing IsActive="True" MinWidth="100" MinHeight="100" />
+                </StackPanel>
+            </Grid>
+
         </Grid>
     </ScrollViewer>
 </Page>
