--- a/ShoesShop/Views/ShoesDetailPage.xaml
+++ b/ShoesShop/Views/ShoesDetailPage.xaml
@@ -2,183 +2,106 @@
     x:Class="ShoesShop.Views.ShoesDetailPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="using:ShoesShop.Views"
+    xmlns:helpers="using:ShoesShop.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
-    xmlns:models="using:ShoesShop.Core.Models"
-    xmlns:behaviors="using:ShoesShop.Behaviors"
-    behaviors:NavigationViewHeaderBehavior.HeaderMode="Never"
-    xmlns:helpers="using:ShoesShop.Helpers"
     mc:Ignorable="d">
+
     <Page.Resources>
-        <helpers:VietnamesePriceConverter x:Key="VietnamesePriceConverter"/>
-        <helpers:DecimalToDoubleConverter x:Key="DecimalToDoubleConverter" />
+        <helpers:PrefixConverter x:Key="PrefixConverter" />
+        <helpers:StringToBitmapImageConverter x:Key="StringToBitmapImageConverter" />
+        <helpers:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter" />
+
+        <Style x:Key="TitleText" TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="FontWeight" Value="Medium" />
+            <Setter Property="FontSize" Value="28" />
+        </Style>
+        <Style x:Key="UserText" TargetType="TextBlock">
+            <Setter Property="VerticalAlignment" Value="Center" />
+            <Setter Property="HorizontalAlignment" Value="Left" />
+            <Setter Property="FontWeight" Value="Medium" />
+        </Style>
+        <Style x:Key="ButtonSize" TargetType="Button">
+            <Setter Property="MaxWidth" Value="100" />
+            <Setter Property="MaxHeight" Value="46" />
+            <Setter Property="FontWeight" Value="Medium" />
+            <Setter Property="CornerRadius" Value="4" />
+        </Style>
     </Page.Resources>
 
-    <Grid x:Name="ContentArea">
-        <Grid.Resources>
-            <Style TargetType="TextBlock">
-                <Setter Property="TextWrapping" Value="Wrap"/>
-            </Style>
-            <Style x:Key="ShoesTitleStyle" TargetType="TextBlock">
-                <Setter Property="FontSize" Value="28" />
-                <Setter Property="FontWeight" Value="Medium" />
-                <Setter Property="Margin" Value="0,16,0,28" />
-                <Setter Property="HorizontalAlignment" Value="Center" />
-                <Setter Property="TextWrapping" Value="Wrap" />
-                <Setter Property="TextAlignment" Value="Center" />
-            </Style>
-            <Style x:Key="ShoesDescriptionStyle" TargetType="TextBlock">
-                <Setter Property="FontSize" Value="14" />
-                <Setter Property="Margin" Value="0,0,0,10" />
-                <Setter Property="TextWrapping" Value="Wrap" />
-            </Style>
-            <Style x:Key="ShoesPosterStyle" TargetType="Image">
-                <Setter Property="MaxWidth" Value="300" />
-                <Setter Property="Height" Value="Auto" />
-            </Style>
-            <Style x:Key="PosterBorderStyle" TargetType="Border">
-                <Setter Property="CornerRadius" Value="10" />
-                <Setter Property="Margin" Value="0,0,40,10" />
-                <Setter Property="BorderBrush" Value="{ThemeResource CardBorderBrush}" />
-                <Setter Property="BorderThickness" Value="2" />
-            </Style>
-        </Grid.Resources>
+    <ScrollViewer VerticalScrollBarVisibility="Hidden">
+        <Grid Padding="20" Background="{ThemeResource CardBackground}" CornerRadius="10" DataContext="{x:Bind ViewModel.EditShoes, Mode=TwoWay}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
 
-        <ScrollViewer IsTabStop="True">
-            <StackPanel x:Name="contentPanel" DataContext="{x:Bind ViewModel.Item, Mode=TwoWay}" Spacing="12">
-                <TextBlock Style="{StaticResource ShoesTitleStyle}" Text="{Binding Name}" />
-
-                <StackPanel x:Name="DetailPanel" Orientation="Horizontal">
-                    <StackPanel x:Name="itemPosterContainer" HorizontalAlignment="Center">
-                        <Border Style="{StaticResource PosterBorderStyle}">
-                            <Image 
-                                x:Name="itemPoster" 
-                                Style="{StaticResource ShoesPosterStyle}"
-                                Source="{Binding Image, Mode=TwoWay}" />
-                        </Border>
-
-                        <CommandBar DefaultLabelPosition="Right" HorizontalAlignment="Center" HorizontalContentAlignment="Center" Visibility="{x:Bind ViewModel.IsEditButtonVisible, Mode=OneWay}">
-                            <AppBarButton Icon="Edit" Label="Edit" Command="{x:Bind ViewModel.SetEditItemSessionButtonCommand}"/>
-                            <AppBarButton Icon="Delete" Label="Delete" x:Name="DeleteItemButton" Click="DeleteItemButton_Click" />
-                        </CommandBar>
-                    </StackPanel>
-
-                    <StackPanel x:Name="ShoesInfoGroup"  Visibility="{x:Bind ViewModel.IsEditButtonVisible, Mode=OneWay}">
-                        <StackPanel.Resources>
-                            <Style x:Key="LabelStyle" TargetType="TextBlock">
-                                <Setter Property="FontSize" Value="12" />
-                                <Setter Property="Foreground" Value="{ThemeResource TextFillColorSecondary}" />
-                            </Style>
-                            <Style x:Key="ContentStyle" TargetType="TextBlock">
-                                <Setter Property="FontSize" Value="18" />
-                                <Setter Property="FontWeight" Value="Medium" />
-                            </Style>
-                            <Style TargetType="StackPanel">
-                                <Setter Property="Margin" Value="0,0,0,8" />
-                            </Style>
-                        </StackPanel.Resources>
-
-                        <StackPanel x:Name="ShoesName">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Name: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" TextWrapping="Wrap" MaxWidth="640" HorizontalAlignment="Left" Text="{Binding Name, Mode=TwoWay}" />
-                        </StackPanel>
-                        <StackPanel x:Name="ShoesDescription">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Description: " />
-                            <RichTextBlock TextAlignment="Justify" MaxWidth="640" HorizontalAlignment="Left">
-                                <Paragraph>
-                                    <Run Text="{Binding Description, Mode=TwoWay}" />
-                                </Paragraph>
-                            </RichTextBlock>
-                        </StackPanel>
-                        <StackPanel x:Name="ShoesBrand" >
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Brand: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Brand, Mode=TwoWay}" />
-                        </StackPanel>
-                        <StackPanel x:Name="ShoesColor">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Color: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Color, Mode=OneWay}" />
-                        </StackPanel>
-                        <StackPanel x:Name="ShoesSellingPrice">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Selling Price: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Price, Mode=TwoWay, Converter={StaticResource VietnamesePriceConverter}}" />
-                        </StackPanel>
-                        <!--<StackPanel x:Name="ShoesPurchasePrice">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Purchase Price: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding PurchasePrice, Mode=TwoWay, Converter={StaticResource VietnamesePriceConverter}}" />
-                        </StackPanel>-->
-                        
-                        <StackPanel x:Name="ShoesCategory">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Category: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{x:Bind ViewModel.Category.Name, Mode=OneWay}" />
-                        </StackPanel>
-                        <StackPanel x:Name="ShoesRemaningQuantity">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Remaining quantity: " />
-                            <TextBlock Style="{StaticResource ContentStyle}" Text="{Binding Stock, Mode=TwoWay}" />
-                        </StackPanel>
-                        <!--<StackPanel x:Name="ShoesRatingsAverage" HorizontalAlignment="Left">
-                            <TextBlock Style="{StaticResource LabelStyle}" Text="Ratings Average: " />
-                            <RatingControl 
-                                IsClearEnabled="True"
-                                IsReadOnly="True" 
-                                PlaceholderValue="{Binding RatingsAverage, Mode=TwoWay}"
-                                Caption="{Binding RatingsAverage, Mode=TwoWay}"/>
-                        </StackPanel>-->
-                    </StackPanel>
-
-                    <StackPanel Spacing="16" x:Name="EditShoesStackPanel" Visibility="{x:Bind ViewModel.IsEditSession, Mode=OneWay}">
-
-                        <TextBox Header="Shoes title" PlaceholderText="Title" Text="{x:Bind ViewModel.EditShoes.Name, Mode=TwoWay}" />
-                        <TextBox Header="Brand" PlaceholderText="Brand" Text="{x:Bind ViewModel.EditShoes.Brand, Mode=TwoWay}" />
-                        <TextBox Header="Color" PlaceholderText="Shoes color" Text="{x:Bind ViewModel.EditShoes.Color, Mode=TwoWay}" />
-                        <NumberBox Header="Size" SmallChange="1" LargeChange="10" SpinButtonPlacementMode="Inline" Value="{x:Bind ViewModel.EditShoes.Size, Mode=TwoWay}" />
-                        <NumberBox Header="Available quantity" SmallChange="1" LargeChange="10" SpinButtonPlacementMode="Inline" Value="{x:Bind ViewModel.EditShoes.Stock, Mode=TwoWay}"/>
-                        <TextBox Header="Description" Height="120" PlaceholderText="Write Shoes description" Text="{x:Bind ViewModel.EditShoes.Description, Mode=TwoWay}" />
-                        <!--<NumberBox Header="Purchase price" Value="{x:Bind ViewModel.EditShoes.PurchasePrice, Mode=TwoWay}" SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />-->
-                        <NumberBox Header="Selling price" Value="{x:Bind ViewModel.EditShoes.Price, Mode=TwoWay, Converter={StaticResource DecimalToDoubleConverter}}"  SmallChange="1000" LargeChange="10000" SpinButtonPlacementMode="Inline" />
-                        <ComboBox 
-                            x:Name="CategoryCombobox" 
-                            SelectionChanged="CategoryCombobox_SelectionChanged"
-                            Header="Category" Width="200" 
-                            ItemsSource="{x:Bind ViewModel.CategoryOptions, Mode=OneWay}"
-                            DisplayMemberPath="Name"  />
-                        <TextBlock Text="{x:Bind ViewModel.Item.Name}" FontSize="12" />
-                        <StackPanel VerticalAlignment="Top">
-                            <TextBlock Text="Shoes photo" Margin="0,0,0,10"/>
-                            <StackPanel Orientation="Horizontal">
-                                <Button  Content="Select a picture" Command="{x:Bind ViewModel.SelectImageButtonCommand}" />
-                                <TextBlock FontWeight="Medium" Text="{x:Bind ViewModel.SelectedImageName, Mode=OneWay}" TextWrapping="Wrap" Padding="20,5,0,0"/>
-                                <Button VerticalAlignment="Center" Visibility="{x:Bind ViewModel.IsImageSelected, Mode=OneWay}" Margin="4,0,0,0" Command="{x:Bind ViewModel.RemoveImageButtonCommand}">
-                                    <FontIcon Glyph="&#xE8BB;" FontSize="12" />
-                                </Button>
-                            </StackPanel>
-                        </StackPanel>
-
-
-                        <!--Loading-->
-                        <ProgressRing 
-                            IsActive="{x:Bind ViewModel.IsEditLoading, Mode=OneWay}" 
-                            Visibility="{x:Bind ViewModel.IsEditLoading, Mode=OneWay}" 
-                            Width="60"
-                            Height="{Binding Width, RelativeSource={RelativeSource Self}}"/>
-
-                        <!--Error & Info-->
-                        <InfoBarPanel>
-                            <InfoBar 
-                                Title="Error Editing Shoes"
-                                Severity="Error"
-                                IsOpen="{x:Bind ViewModel.HasEditError, Mode=OneWay}"
-                                Message="{x:Bind ViewModel.EditErrorMessage, Mode=OneWay}"/>
-                        </InfoBarPanel>
-
-                        <StackPanel HorizontalAlignment="Right" Orientation="Horizontal" Spacing="12">
-                            <Button Style="{StaticResource AccentButtonStyle}" Content="Save changes" Command="{x:Bind ViewModel.EditShoesButtonCommand}"  />
-                            <Button Content="Cancel" Command="{x:Bind ViewModel.CancelButtonCommand}" />
-                        </StackPanel>
-                    </StackPanel>
-                </StackPanel>
-
+            <!-- Left Section -->
+            <StackPanel Grid.Column="0" Spacing="15" HorizontalAlignment="Stretch" Padding="0 0 20 0">
+                <TextBlock Text="Add Shoes" FontSize="24" FontWeight="Bold" />
+                <TextBox Header="Product Name" PlaceholderText="Enter user's full name" Text="{x:Bind ViewModel.EditShoes.Name, Mode=TwoWay}" />
+                <TextBox Header="Description" PlaceholderText="Write something here" Text="{x:Bind ViewModel.EditShoes.Description, Mode=TwoWay}" MinHeight="250"/>
+                <ComboBox 
+                    HorizontalAlignment="Stretch" 
+                    Header="Category" 
+                    PlaceholderText="Select Category"
+                    ItemsSource="{x:Bind ViewModel.CategoryOptions, Mode=OneWay}"
+                    DisplayMemberPath="Name"
+                    SelectedItem="{x:Bind ViewModel.selectedCategory, Mode=TwoWay}" 
+                    />
+                <ComboBox Grid.Column="1" HorizontalAlignment="Stretch" x:Name="StatusComboBox" Header="Status"  PlaceholderText="Select Status" SelectedValue="{x:Bind ViewModel.EditShoes.Status, Mode=TwoWay}" SelectedValuePath="Content">
+                    <ComboBoxItem Content="Active" />
+                    <ComboBoxItem Content="Inactive" />
+                </ComboBox>
+                <TextBlock Text="Address:" FontWeight="Medium" />
+                <Grid ColumnSpacing="20" RowSpacing="20">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+                    <TextBox Header="Brand Name" PlaceholderText="Enter Brand" Text="{x:Bind ViewModel.EditShoes.Brand, Mode=TwoWay}" Grid.Column="0" Grid.Row="0" />
+                    <TextBox Header="Size" PlaceholderText="Enter Size" Text="{x:Bind ViewModel.EditShoes.Size, Mode=TwoWay}" Grid.Column="1" Grid.Row="0" />
+                    <TextBox Header="Color" PlaceholderText="Enter Color" Text="{x:Bind ViewModel.EditShoes.Color, Mode=TwoWay}" Grid.Column="0" Grid.Row="1" />
+                    <TextBox Header="Stock Quantity" PlaceholderText="Enter Stock" Text="{x:Bind ViewModel.EditShoes.Stock, Mode=TwoWay}" Grid.Column="1" Grid.Row="1"/>
+                    <TextBox Header="Cost Price" PlaceholderText="Enter zip code" Text="{x:Bind ViewModel.EditShoes.Cost, Mode=TwoWay}" Grid.Column="0" Grid.Row="2"/>
+                    <TextBox Header="Selling Price" PlaceholderText="Enter country" Text="{x:Bind ViewModel.EditShoes.Price, Mode=TwoWay}" Grid.Column="1" Grid.Row="2"/>
+                </Grid>
             </StackPanel>
-        </ScrollViewer>
-    </Grid>
+
+            <!-- Right Section -->
+            <StackPanel Grid.Column="1" Spacing="15" HorizontalAlignment="Stretch">
+                <Border BorderThickness="2" CornerRadius="40" MaxWidth="200" MaxHeight="200">
+                    <Image Source="{x:Bind ViewModel.EditShoes.Image, Mode=TwoWay, Converter={StaticResource StringToBitmapImageConverter}}" Stretch="UniformToFill" />
+                </Border>
+                <TextBlock Text="Upload Profile Picture" FontWeight="SemiBold" />
+                <Button Content="Browse Image" Command="{x:Bind ViewModel.SelectImageButtonCommand}" />
+                <TextBlock Text="Actions" FontWeight="Bold" FontSize="18" />
+                <StackPanel Orientation="Horizontal" Spacing="10">
+                    <Button Content="Update" 
+                Background="#232321" 
+                Foreground="White" 
+                Style="{StaticResource ButtonSize}" 
+                Command="{x:Bind ViewModel.UpdateButtonCommand}" />
+                    <Button Content="Cancel" 
+                BorderThickness="2" 
+                BorderBrush="#232321" 
+                Style="{StaticResource ButtonSize}" 
+                Command="{x:Bind ViewModel.CancelButtonCommand}" />
+                </StackPanel>
+            </StackPanel>
+            <Grid Background="Transparent" Visibility="{x:Bind ViewModel.IsEditLoading, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+                <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+                    <ProgressRing IsActive="True" MinWidth="100" MinHeight="100" />
+                </StackPanel>
+            </Grid>
+        </Grid>
+    </ScrollViewer>
 </Page>
